@@ -1,6 +1,12 @@
 2021-06-16 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c,
+	  support/regression/tests/bug-3257.c:
+	  Fix bug #3257.
+
+2021-06-16 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/gen.c,
 	  src/stm8/peeph.def,
 	  support/regression/tests/z88dk_callee.c:
 	  Improve tail call optimization for __z88dk_callee functions.
